# arg_enum_proc_macro

./: Cargo.toml  README.md
src/: lib.rs
tests/: enums.rs
tests/ui/: complex-enum.rs  complex-enum.stderr  derive-not-on-enum.rs
